--- a/emotions.ipynb
+++ b/emotions.ipynb
@@ -1,58 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "view-in-github"
-   },
-   "source": [
-    "<a href=\"https://colab.research.google.com/github/nheumann/nlp-sentiment-analysis/blob/main/emotions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "VgBAIEq9r7O1",
-    "outputId": "0ece6fbd-2e2b-42d8-a531-f47555d1122e"
-   },
-   "outputs": [],
-   "source": [
-    "#!pip install datasets transformers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "id": "M_jnMU4bVL9M"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\programming\\python\\python382\\lib\\site-packages\\torchaudio\\backend\\utils.py:67: UserWarning: No audio backend is available.\n",
-      "  warnings.warn('No audio backend is available.')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datasets import load_dataset\n",
     "import pandas as pd\n",
     "from transformers import Trainer, TrainingArguments, BertForSequenceClassification, DistilBertForSequenceClassification, AdamW, AutoTokenizer, PretrainedConfig, file_utils, TextClassificationPipeline, Pipeline\n",
     "from torch.utils.data import DataLoader\n",
     "import torch\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from tqdm.auto import tqdm\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "id": "v7NvJSTqrCVt"
    },
@@ -63,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -71,29 +39,21 @@
     "id": "UsJ7a5yMlBxV",
     "outputId": "be7fa06e-8166-4468-c116-ddb63ce38dd1"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Reusing dataset go_emotions (C:\\Users\\Niklasi5\\.cache\\huggingface\\datasets\\go_emotions\\simplified\\0.0.0\\2637cfdd4e64d30249c3ed2150fa2b9d279766bfcd6a809b9f085c61a90d776d)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = load_dataset(\"go_emotions\", \"simplified\")\n",
     "\n",
     "train_raw = data['train']\n",
-    "valid_raw = data['validation']\n",
+    "val_raw = data['validation']\n",
     "\n",
     "train_df = train_raw.to_pandas()\n",
-    "valid_df = valid_raw.to_pandas()\n",
+    "val_df = val_raw.to_pandas()\n",
     "test_df = data['test'].to_pandas()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "id": "q2laPtFDci-D"
    },
@@ -108,13 +68,13 @@
     "n_labels = 28\n",
     "\n",
     "train_oh_labels = one_hot_labels(train_df, n_labels)\n",
-    "valid_oh_labels = one_hot_labels(valid_df, n_labels)\n",
+    "val_oh_labels = one_hot_labels(val_df, n_labels)\n",
     "test_oh_labels = one_hot_labels(test_df, n_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -163,19 +123,19 @@
     "#train = train.map(lambda e: tokenizer(e['text'], truncation=True, padding='max_length'), batched=True)\n",
     "# we can still pass max length here\n",
     "train_encodings = tokenizer(train_df['text'].values.tolist(), padding=True, truncation=True)#, is_split_into_words=True, return_offsets_mapping=True, padding=True, truncation=True)\n",
-    "val_encodings = tokenizer(valid_df['text'].values.tolist(), padding=True, truncation=True)#, is_split_into_words=True, return_offsets_mapping=True, padding=True, truncation=True)\n",
+    "val_encodings = tokenizer(val_df['text'].values.tolist(), padding=True, truncation=True)#, is_split_into_words=True, return_offsets_mapping=True, padding=True, truncation=True)\n",
     "test_encodings = tokenizer(test_df['text'].values.tolist(), padding=True, truncation=True)#, is_split_into_words=True, return_offsets_mapping=True, padding=True, truncation=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "id": "kfjLAGsWuj0V"
    },
    "outputs": [],
    "source": [
-    "class IMDbDataset(torch.utils.data.Dataset):\n",
+    "class EmotionsDataset(torch.utils.data.Dataset):\n",
     "    def __init__(self, encodings, labels):\n",
     "        self.encodings = encodings\n",
     "        self.labels = labels\n",
@@ -188,14 +148,14 @@
     "    def __len__(self):\n",
     "        return len(self.labels)\n",
     "\n",
-    "train_dataset = IMDbDataset(train_encodings, train_oh_labels)\n",
-    "val_dataset = IMDbDataset(val_encodings, valid_oh_labels)\n",
-    "test_dataset = IMDbDataset(test_encodings, test_oh_labels)"
+    "train_dataset = EmotionsDataset(train_encodings, train_oh_labels)\n",
+    "val_dataset = EmotionsDataset(val_encodings, val_oh_labels)\n",
+    "test_dataset = EmotionsDataset(test_encodings, test_oh_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "id": "jx8_5fG8jGw8"
    },
@@ -214,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -289,182 +249,7 @@
     "id": "kVmsfRyCvZm1",
     "outputId": "105a701b-42a1-4781-e7dd-49954795d433"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of the model checkpoint at distilbert-base-cased were not used when initializing DistilBertForSequenceClassification: ['vocab_transform.weight', 'vocab_layer_norm.weight', 'vocab_transform.bias', 'vocab_projector.bias', 'vocab_layer_norm.bias', 'vocab_projector.weight']\n",
-      "- This IS expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at distilbert-base-cased and are newly initialized: ['pre_classifier.bias', 'classifier.bias', 'classifier.weight', 'pre_classifier.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='2714' max='2714' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [2714/2714 21:52, Epoch 1/1]\n",
-       "    </div>\n",
-       "    <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: left;\">\n",
-       "      <th>Step</th>\n",
-       "      <th>Training Loss</th>\n",
-       "      <th>Validation Loss</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>100</td>\n",
-       "      <td>0.605200</td>\n",
-       "      <td>0.367197</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>200</td>\n",
-       "      <td>0.245700</td>\n",
-       "      <td>0.167335</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>300</td>\n",
-       "      <td>0.160900</td>\n",
-       "      <td>0.150261</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>400</td>\n",
-       "      <td>0.150600</td>\n",
-       "      <td>0.144212</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>500</td>\n",
-       "      <td>0.138000</td>\n",
-       "      <td>0.127688</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>600</td>\n",
-       "      <td>0.128500</td>\n",
-       "      <td>0.114903</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>700</td>\n",
-       "      <td>0.117200</td>\n",
-       "      <td>0.109820</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>800</td>\n",
-       "      <td>0.109600</td>\n",
-       "      <td>0.104713</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>900</td>\n",
-       "      <td>0.109700</td>\n",
-       "      <td>0.103508</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1000</td>\n",
-       "      <td>0.108600</td>\n",
-       "      <td>0.102078</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1100</td>\n",
-       "      <td>0.099800</td>\n",
-       "      <td>0.099513</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1200</td>\n",
-       "      <td>0.100600</td>\n",
-       "      <td>0.097738</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1300</td>\n",
-       "      <td>0.097700</td>\n",
-       "      <td>0.096343</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1400</td>\n",
-       "      <td>0.098000</td>\n",
-       "      <td>0.094775</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1500</td>\n",
-       "      <td>0.098300</td>\n",
-       "      <td>0.094222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1600</td>\n",
-       "      <td>0.097900</td>\n",
-       "      <td>0.092424</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1700</td>\n",
-       "      <td>0.095500</td>\n",
-       "      <td>0.092855</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1800</td>\n",
-       "      <td>0.093700</td>\n",
-       "      <td>0.090778</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1900</td>\n",
-       "      <td>0.092000</td>\n",
-       "      <td>0.090300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2000</td>\n",
-       "      <td>0.092600</td>\n",
-       "      <td>0.089196</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2100</td>\n",
-       "      <td>0.091800</td>\n",
-       "      <td>0.089254</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2200</td>\n",
-       "      <td>0.089300</td>\n",
-       "      <td>0.088255</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2300</td>\n",
-       "      <td>0.093200</td>\n",
-       "      <td>0.088526</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2400</td>\n",
-       "      <td>0.091700</td>\n",
-       "      <td>0.088070</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2500</td>\n",
-       "      <td>0.090600</td>\n",
-       "      <td>0.087451</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2600</td>\n",
-       "      <td>0.088700</td>\n",
-       "      <td>0.087161</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2700</td>\n",
-       "      <td>0.091900</td>\n",
-       "      <td>0.087092</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table><p>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "training_args = TrainingArguments(\n",
     "    output_dir=output_dir,          # output directory\n",
@@ -620,9 +405,148 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = inference_pipeline([\"O M G\"])\n",
-    "analyze_result(x, .2)"
+    "friends_dataset = pd.read_csv(\"data/friends-final-raw.txt\", sep=\"\\t\")\n",
+    "friends_dataset.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "friends_dataset[\"line\"] = friends_dataset[\"line\"].str.split(r'[.!?]+\\s')\n",
+    "friends_dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "person_counts = friends_dataset[\"person\"].value_counts()\n",
+    "main_characters = person_counts[person_counts > 1000].reset_index()[\"index\"]\n",
+    "print(main_characters)\n",
+    "\n",
+    "friends_dataset = friends_dataset[friends_dataset[\"person\"].isin(main_characters)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted_emotions = {}\n",
+    "for p in main_characters:\n",
+    "    predicted_emotions[p] = list()\n",
+    "\n",
+    "for row in friends_dataset.itertuples():\n",
+    "    x = inference_pipeline(row.line)\n",
+    "    result = analyze_result(x, .2)\n",
+    "    result = [(pred['label'], pred['score']) for pred in result[0]] \n",
+    "    predicted_emotions[row.person].append(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_emotions_per_person = {}\n",
+    "for p in main_characters:\n",
+    "    total_emotions_per_person[p] = {}\n",
+    "    for l in labels:\n",
+    "        total_emotions_per_person[p][l] = 0\n",
+    "\n",
+    "for person, sentences in predicted_emotions.items():    \n",
+    "    for s in sentences:\n",
+    "        for e in s:\n",
+    "            total_emotions_per_person[person][e[0]] += (e[1]/ len(sentences))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for person, emotions in total_emotions_per_person.items():\n",
+    "    plt.title(person)\n",
+    "    plt.ylim((0,0.1))\n",
+    "    plt.xticks(rotation='vertical')\n",
+    "    plt.bar(range(0, len(labels)), emotions.values(), tick_label=labels)\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(columns=[\"person\", \"emotion\", \"value\"])\n",
+    "\n",
+    "for person, emotions in total_emotions_per_person.items():\n",
+    "    for emotion, value in emotions.items():\n",
+    "        df.loc[len(df)] = [person,emotion,value]\n",
+    "        \n",
+    "df = df[df[\"emotion\"] != \"neutral\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pip install seaborn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "\n",
+    "sns.set(rc={'figure.figsize':(15,8)})\n",
+    "sns.set_theme(style=\"whitegrid\")\n",
+    "chart = sns.barplot(x=\"emotion\", y=\"value\", hue=\"person\", data=df)\n",
+    "chart.set_xticklabels(chart.get_xticklabels(), rotation=90)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[len(s) for s in predicted_emotions.values()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count = 0\n",
+    "for line in predicted_emotions.values():\n",
+    "    for sentence in line:\n",
+    "        count += len(sentence)\n",
+    "count       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
