Add application idea

--- a/Predict-dataset.ipynb
+++ b/Predict-dataset.ipynb
@@ -82,78 +82,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "27c1cacc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\daten\\studium\\master\\exercise\\semester2\\nlp\\nlp\\lib\\site-packages\\torchaudio\\backend\\utils.py:67: UserWarning: No audio backend is available.\n",
+      "  warnings.warn('No audio backend is available.')\n"
+     ]
+    }
+   ],
    "source": [
-    "# This is pretty much the source code from TextClassificationPipeline, but when i subclassed it\n",
-    "# didnt correctly work(not sure why, didn't try again at the end) so i just copied the whole code.\n",
-    "# We cant use TextClassification itself, since it only outputs the highest label\n",
-    "if file_utils.is_tf_available():\n",
-    "    from transformers.models.auto.modeling_tf_auto import TF_MODEL_FOR_SEQUENCE_CLASSIFICATION_MAPPING\n",
-    "\n",
-    "if file_utils.is_torch_available():\n",
-    "    from transformers.models.auto.modeling_auto import MODEL_FOR_SEQUENCE_CLASSIFICATION_MAPPING\n",
-    "\n",
-    "class MultiLabelTextClassification(Pipeline):\n",
-    "    \"\"\"\n",
-    "    Text classification pipeline using any :obj:`ModelForSequenceClassification`. See the `sequence classification\n",
-    "    examples <../task_summary.html#sequence-classification>`__ for more information.\n",
-    "\n",
-    "    This text classification pipeline can currently be loaded from :func:`~transformers.pipeline` using the following\n",
-    "    task identifier: :obj:`\"sentiment-analysis\"` (for classifying sequences according to positive or negative\n",
-    "    sentiments).\n",
-    "\n",
-    "    If multiple classification labels are available (:obj:`model.config.num_labels >= 2`), the pipeline will run a\n",
-    "    softmax over the results. If there is a single label, the pipeline will run a sigmoid over the result.\n",
-    "\n",
-    "    The models that this pipeline can use are models that have been fine-tuned on a sequence classification task. See\n",
-    "    the up-to-date list of available models on `huggingface.co/models\n",
-    "    <https://huggingface.co/models?filter=text-classification>`__.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self, return_all_scores: bool = False, **kwargs):\n",
-    "        super().__init__(**kwargs)\n",
-    "\n",
-    "        self.check_model_type(\n",
-    "            TF_MODEL_FOR_SEQUENCE_CLASSIFICATION_MAPPING\n",
-    "            if self.framework == \"tf\"\n",
-    "            else MODEL_FOR_SEQUENCE_CLASSIFICATION_MAPPING\n",
-    "        )\n",
-    "\n",
-    "        self.return_all_scores = return_all_scores\n",
-    "\n",
-    "\n",
-    "    def __call__(self, *args, **kwargs):\n",
-    "        \"\"\"\n",
-    "        Classify the text(s) given as inputs.\n",
-    "\n",
-    "        Args:\n",
-    "            args (:obj:`str` or :obj:`List[str]`):\n",
-    "                One or several texts (or one list of prompts) to classify.\n",
-    "\n",
-    "        Return:\n",
-    "            A list or a list of list of :obj:`dict`: Each result comes as list of dictionaries with the following keys:\n",
-    "\n",
-    "            - **label** (:obj:`str`) -- The label predicted.\n",
-    "            - **score** (:obj:`float`) -- The corresponding probability.\n",
-    "\n",
-    "            If ``self.return_all_scores=True``, one such dictionary is returned per label.\n",
-    "        \"\"\"\n",
-    "        outputs = super().__call__(*args, **kwargs)\n",
-    "\n",
-    "\n",
-    "        scores = np.exp(outputs) / (1+np.exp(outputs))\n",
-    "        if self.return_all_scores:\n",
-    "            return [\n",
-    "                [{\"label\": self.model.config.id2label[i], \"score\": score.item()} for i, score in enumerate(item)]\n",
-    "                for item in scores\n",
-    "            ]\n",
-    "        else:\n",
-    "            return [\n",
-    "                {\"label\": self.model.config.id2label[item.argmax()], \"score\": item.max().item()} for item in scores\n",
-    "            ]\n",
+    "from source.classification_utils import MultiLabelTextClassification\n",
     "\n",
     "def analyze_result(result, threshold = 0.5):\n",
     "    \"\"\"Sort the results and throw away all labels with prediction under threshold\"\"\"\n",
@@ -197,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp = pipeline(\"zero-shot-classification\", device=0, model=zero_shot_classifier, tokenizer = zero_shot_classifier)"
+    "zero_shot_pipeline = pipeline(\"zero-shot-classification\", device=0, model=zero_shot_classifier, tokenizer = zero_shot_classifier)"
    ]
   },
   {
@@ -235,6 +178,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7328ebc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset['person'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "afaca29c",
    "metadata": {},
    "outputs": [],
@@ -260,14 +213,46 @@
     "    predicted_emotions[p] = list()\n",
     "\n",
     "for row in tqdm(dataset.itertuples(), total=len(dataset)):\n",
-    "    prediction = temp(row.line, labels, multi_label=True)\n",
-    "    if len(row.line) == 1:\n",
-    "        prediction = [prediction]\n",
-    "    #x = inference_pipeline(row.line)\n",
-    "    prediction = [[{'label' : label, 'score': value} for label, value in zip(sentence['labels'], sentence['scores'])] for sentence in prediction]\n",
-    "    result = analyze_result(prediction, .8)\n",
+    "    #prediction = zero_shot_pipeline(row.line, labels, multi_label=True)\n",
+    "    #if len(row.line) == 1:\n",
+    "    #    prediction = [prediction]\n",
+    "    #prediction = [[{'label' : label, 'score': value} for label, value in zip(sentence['labels'], sentence['scores'])] for sentence in prediction]\n",
+    "    #result = analyze_result(prediction, .8)\n",
+    "    prediction = inference_pipeline(row.line)\n",
+    "    result = analyze_result(prediction, .2)\n",
     "    result = [(pred['label'], pred['score']) for pred in result[0]] \n",
     "    predicted_emotions[row.person].append(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc0c6493",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adeb7e94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/friends-classification.pickle', 'wb') as f:\n",
+    "    pickle.dump(predicted_emotions, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbee3da0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted_emotions = pickle.load(open('data/tennis-classification.pickle', 'rb'))"
    ]
   },
   {
@@ -327,17 +312,18 @@
     "    for emotion, value in emotions.items():\n",
     "        df.loc[len(df)] = [person,emotion,value]\n",
     "        \n",
-    "df = df[df[\"emotion\"] != \"neutral\"]\n",
-    "sns.set(rc={'figure.figsize':(15,8)})\n",
+    "#df = df[df[\"emotion\"] != \"neutral\"]\n",
+    "sns.set(rc={'figure.figsize':(30,8)})\n",
     "sns.set_theme(style=\"whitegrid\")\n",
     "chart = sns.barplot(x=\"emotion\", y=\"value\", hue=\"person\", data=df)\n",
-    "chart.set_xticklabels(chart.get_xticklabels(), rotation=90)"
+    "chart.set_xticklabels(chart.get_xticklabels(), rotation=90)\n",
+    "chart.legend(bbox_to_anchor=(1.01, 1), loc=2, borderaxespad=0.)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3eb4edf0",
+   "id": "b778f9e8",
    "metadata": {},
    "outputs": [],
    "source": []
