--- a/application.ipynb
+++ b/application.ipynb
@@ -11,8 +11,14 @@
     "%autoreload 2\n",
     "\n",
     "import ipywidgets as widgets\n",
-    "from source.app import EmotionPredictor \n",
-    "import pandas as pd"
+    "import numpy as np\n",
+    "from source.emotion import emotion_to_emoji\n",
+    "from source.app import EmotionPredictor, EmotionPredictorZeroShot\n",
+    "import pandas as pd\n",
+    "from IPython.display import Markdown\n",
+    "from IPython.display import clear_output\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -26,21 +32,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a8441bb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "row.line, row.person"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "9ccced2f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path = \"./results/models/best\"\n"
+    "model_path = \"./results/models/best\"\n",
+    "dataset = pd.read_csv(\"data/friends-final-raw.txt\", sep=\"\\t\")\n",
+    "\n",
+    "#predictor = EmotionPredictor(dataset, \"./results/models/best\")\n",
+    "#predictor.predict(\"./data/supervised/friends-classification0.2.pickle\")\n",
+    "\n",
+    "predictor = EmotionPredictorZeroShot(dataset, \"typeform/distilbert-base-uncased-mnli\")\n",
+    "predictor.predict(\"./data/prediction-zero-shot/friends-classification_0.8.pickle\")"
    ]
   },
   {
@@ -48,7 +51,7 @@
    "id": "b7cdfb3a",
    "metadata": {},
    "source": [
-    "# Select a person to analyze"
+    "# Select persons to analyze"
    ]
   },
   {
@@ -58,66 +61,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "person_selection = widgets.Dropdown(\n",
-    "    options=['1', '2', '3'],\n",
-    "    value='2',\n",
-    "    description='Number:',\n",
+    "person_selection = widgets.SelectMultiple(\n",
+    "    options=predictor.frequent_characters,\n",
+    "    value=[],\n",
+    "    description='Character:',\n",
     "    disabled=False,\n",
+    "    layout=widgets.Layout(height=\"105px\")\n",
     ")\n",
-    "def on_change(change):\n",
-    "    if change['type'] == 'change' and change['name'] == 'value':\n",
-    "        print(\"changed to %s\" % change['new'])\n",
+    "button = widgets.Button(description=\"Analyze\")\n",
+    "display(widgets.HBox([person_selection, button]))\n",
     "\n",
-    "person_selection.observe(on_change)"
+    "def on_click(b):\n",
+    "    clear_output(wait=True)\n",
+    "    display(widgets.HBox([person_selection, button]))\n",
+    "    predictor.analyze_persons(person_selection.value)\n",
+    "        \n",
+    "button.on_click(on_click)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "165b7dd1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = pd.read_csv(\"data/friends-final-raw.txt\", sep=\"\\t\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f9bb9d4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictor = EmotionPredictor(dataset, \"./results/models/best\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4302aba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictor.predict(None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "260cf383",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictor.analyze_person(\"MONICA\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e163ca0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
