--- a/Predict-dataset.ipynb
+++ b/Predict-dataset.ipynb
@@ -14,7 +14,10 @@
     "from transformers import DistilBertForSequenceClassification, file_utils, Pipeline, AutoTokenizer, pipeline\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from convokit import Corpus, download"
+    "\n",
+    "from source.emotion import all_emotions\n",
+    "from source.data_utils import load_friends_dataset, load_tennis_dataset\n",
+    "from source.classification_utils import MultiLabelTextClassification, analyze_result"
    ]
   },
   {
@@ -47,66 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = [\n",
-    "    \"admiration\",\n",
-    "    \"amusement\",\n",
-    "    \"anger\",\n",
-    "    \"annoyance\",\n",
-    "    \"approval\",\n",
-    "    \"caring\",\n",
-    "    \"confusion\",\n",
-    "    \"curiosity\",\n",
-    "    \"desire\",\n",
-    "    \"disappointment\",\n",
-    "    \"disapproval\",\n",
-    "    \"disgust\",\n",
-    "    \"embarrassment\",\n",
-    "    \"excitement\",\n",
-    "    \"fear\",\n",
-    "    \"gratitude\",\n",
-    "    \"grief\",\n",
-    "    \"joy\",\n",
-    "    \"love\",\n",
-    "    \"nervousness\",\n",
-    "    \"optimism\",\n",
-    "    \"pride\",\n",
-    "    \"realization\",\n",
-    "    \"relief\",\n",
-    "    \"remorse\",\n",
-    "    \"sadness\",\n",
-    "    \"surprise\",\n",
-    "    \"neutral\"\n",
-    "  ]\n",
+    "labels = all_emotions\n",
     "id2label = {i:label for i,label in enumerate(labels)}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "27c1cacc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\daten\\studium\\master\\exercise\\semester2\\nlp\\nlp\\lib\\site-packages\\torchaudio\\backend\\utils.py:67: UserWarning: No audio backend is available.\n",
-      "  warnings.warn('No audio backend is available.')\n"
-     ]
-    }
-   ],
-   "source": [
-    "from source.classification_utils import MultiLabelTextClassification\n",
-    "\n",
-    "def analyze_result(result, threshold = 0.5):\n",
-    "    \"\"\"Sort the results and throw away all labels with prediction under threshold\"\"\"\n",
-    "    output = []\n",
-    "    for sample in result:\n",
-    "        sample = np.array(sample)\n",
-    "        scores = np.array([label['score'] for label in sample])\n",
-    "        predicted_samples = np.argwhere(scores > threshold).reshape(-1)\n",
-    "        output.append(sorted(sample[predicted_samples], key = lambda item: item['score'], reverse=True))\n",
-    "    return output"
    ]
   },
   {
@@ -126,20 +71,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44ab8330",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zero_shot_classifier = \"typeform/distilbert-base-uncased-mnli\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "c24c06c5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "zero_shot_classifier = \"typeform/distilbert-base-uncased-mnli\"\n",
     "zero_shot_pipeline = pipeline(\"zero-shot-classification\", device=0, model=zero_shot_classifier, tokenizer = zero_shot_classifier)"
    ]
   },
@@ -158,31 +94,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv(\"data/friends-final-raw.txt\", sep=\"\\t\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "72d80c50",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corpus = Corpus(filename=download(\"tennis-corpus\"))\n",
-    "utterances = list(corpus.iter_utterances())\n",
-    "texts = [t.text for t in utterances]\n",
-    "speakers = [t.get_speaker().id for t in utterances]\n",
-    "dataset = pd.DataFrame(zip(texts, speakers), columns=['line', 'person']) # todo: change name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7328ebc3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset['person'].unique()"
+    "dataset = load_friends_dataset(\"data/friends-final-raw.txt\")\n",
+    "#dataset = load_tennis_dataset()"
    ]
   },
   {
@@ -192,8 +105,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# split into sentences\n",
-    "dataset[\"line\"] = dataset[\"line\"].str.split(r'[.!?]+\\s')\n",
     "person_counts = dataset[\"person\"].value_counts()\n",
     "main_characters = person_counts[person_counts > 1000].reset_index()[\"index\"]\n",
     "print(main_characters)\n",
@@ -220,6 +131,8 @@
     "    #result = analyze_result(prediction, .8)\n",
     "    prediction = inference_pipeline(row.line)\n",
     "    result = analyze_result(prediction, .2)\n",
+    "    \n",
+    "    \n",
     "    result = [(pred['label'], pred['score']) for pred in result[0]] \n",
     "    predicted_emotions[row.person].append(result)"
    ]
