--- a/application.ipynb
+++ b/application.ipynb
@@ -12,13 +12,15 @@
     "\n",
     "import ipywidgets as widgets\n",
     "import numpy as np\n",
-    "from source.emotion import emotion_to_emoji\n",
-    "from source.app import EmotionPredictor, EmotionPredictorZeroShot\n",
+    "from convokit import Corpus, download\n",
     "import pandas as pd\n",
     "from IPython.display import Markdown\n",
     "from IPython.display import clear_output\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "from source.emotion import emotion_to_emoji\n",
+    "from source.app import EmotionPredictor, EmotionPredictorZeroShot"
    ]
   },
   {
@@ -38,12 +40,20 @@
    "source": [
     "model_path = \"./results/models/best\"\n",
     "dataset = pd.read_csv(\"data/friends-final-raw.txt\", sep=\"\\t\")\n",
+    "prediction_path = \"./data/prediction-zero-shot/friends-classification_0.8.pickle\"\n",
+    "\n",
+    "#corpus = Corpus(filename=download(\"tennis-corpus\"))\n",
+    "#utterances = list(corpus.iter_utterances())\n",
+    "#texts = [t.text for t in utterances]\n",
+    "#speakers = [t.get_speaker().id for t in utterances]\n",
+    "#dataset = pd.DataFrame(zip(texts, speakers), columns=['line', 'person'])\n",
+    "#prediction_path = \"./data/prediction-zero-shot/tennis-classification_0.8.pickle\"\n",
     "\n",
     "#predictor = EmotionPredictor(dataset, \"./results/models/best\")\n",
     "#predictor.predict(\"./data/supervised/friends-classification0.2.pickle\")\n",
     "\n",
     "predictor = EmotionPredictorZeroShot(dataset, \"typeform/distilbert-base-uncased-mnli\")\n",
-    "predictor.predict(\"./data/prediction-zero-shot/friends-classification_0.8.pickle\")"
+    "predictor.predict(prediction_path)"
    ]
   },
   {
@@ -78,6 +88,14 @@
     "        \n",
     "button.on_click(on_click)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49966681",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
