--- a/emotions-training.ipynb
+++ b/emotions-training.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training our deep learning model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Code taken from   \n",
+    "https://huggingface.co/transformers/custom_datasets.html  \n",
+    "https://towardsdatascience.com/training-a-multi-label-emotion-classifier-with-tez-and-pytorch-af04c899a63a\n",
+    "  - Not sure how much of that code is actually left, but we started with it so we mention it here"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -15,7 +32,17 @@
     "import torch\n",
     "import numpy as np\n",
     "from tqdm.auto import tqdm\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from source.emotion import all_emotions\n",
+    "from source.classification_utils import MultiLabelTextClassification, analyze_result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Initialization and dataset preparation"
    ]
   },
   {
@@ -26,7 +53,9 @@
    },
    "outputs": [],
    "source": [
-    "model_describ = \"distilbert-base-cased\""
+    "model_describ = \"distilbert-base-cased\"\n",
+    "output_dir = './results/models'\n",
+    "best_model_path = output_dir + \"/best\""
    ]
   },
   {
@@ -120,7 +149,6 @@
    "outputs": [],
    "source": [
     "tokenizer = AutoTokenizer.from_pretrained(model_describ)\n",
-    "#train = train.map(lambda e: tokenizer(e['text'], truncation=True, padding='max_length'), batched=True)\n",
     "# we can still pass max length here\n",
     "train_encodings = tokenizer(train_df['text'].values.tolist(), padding=True, truncation=True)#, is_split_into_words=True, return_offsets_mapping=True, padding=True, truncation=True)\n",
     "val_encodings = tokenizer(val_df['text'].values.tolist(), padding=True, truncation=True)#, is_split_into_words=True, return_offsets_mapping=True, padding=True, truncation=True)\n",
@@ -161,6 +189,7 @@
    },
    "outputs": [],
    "source": [
+    "#https://huggingface.co/transformers/main_classes/trainer.html\n",
     "class MultilabelTrainer(Trainer):\n",
     "    def compute_loss(self, model, inputs, return_outputs=False):\n",
     "        labels = inputs.pop(\"labels\")\n",
@@ -178,36 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = [\n",
-    "    \"admiration\",\n",
-    "    \"amusement\",\n",
-    "    \"anger\",\n",
-    "    \"annoyance\",\n",
-    "    \"approval\",\n",
-    "    \"caring\",\n",
-    "    \"confusion\",\n",
-    "    \"curiosity\",\n",
-    "    \"desire\",\n",
-    "    \"disappointment\",\n",
-    "    \"disapproval\",\n",
-    "    \"disgust\",\n",
-    "    \"embarrassment\",\n",
-    "    \"excitement\",\n",
-    "    \"fear\",\n",
-    "    \"gratitude\",\n",
-    "    \"grief\",\n",
-    "    \"joy\",\n",
-    "    \"love\",\n",
-    "    \"nervousness\",\n",
-    "    \"optimism\",\n",
-    "    \"pride\",\n",
-    "    \"realization\",\n",
-    "    \"relief\",\n",
-    "    \"remorse\",\n",
-    "    \"sadness\",\n",
-    "    \"surprise\",\n",
-    "    \"neutral\"\n",
-    "  ]\n",
+    "labels = all_emotions\n",
     "id2label = {i:label for i,label in enumerate(labels)}"
    ]
   },
@@ -216,16 +216,6 @@
    "metadata": {},
    "source": [
     "# Training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_dir = './results/models'\n",
-    "best_model_path = output_dir + \"/best\""
    ]
   },
   {
@@ -271,8 +261,16 @@
     "    model=model,                         # the instantiated 🤗 Transformers model to be trained\n",
     "    args=training_args,                  # training arguments, defined above\n",
     "    train_dataset=train_dataset,         # training dataset\n",
-    "    eval_dataset=val_dataset             # evaluation dataset\n",
-    ")\n",
+    "    eval_dataset=val_dataset,            # evaluation dataset\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "trainer.train()\n",
     "trainer.save_model(best_model_path)"
    ]
@@ -281,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prediction"
+    "# Analyze the model"
    ]
   },
   {
@@ -300,73 +298,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This is pretty much the source code from TextClassificationPipeline, but when i subclassed it\n",
-    "# didnt correctly work(not sure why, didn't try again at the end) so i just copied the whole code.\n",
-    "# We cant use TextClassification itself, since it only outputs the highest label\n",
-    "if file_utils.is_tf_available():\n",
-    "    from transformers.models.auto.modeling_tf_auto import TF_MODEL_FOR_SEQUENCE_CLASSIFICATION_MAPPING\n",
-    "\n",
-    "if file_utils.is_torch_available():\n",
-    "    from transformers.models.auto.modeling_auto import MODEL_FOR_SEQUENCE_CLASSIFICATION_MAPPING\n",
-    "\n",
-    "class MultiLabelTextClassification(Pipeline):\n",
-    "    \"\"\"\n",
-    "    Text classification pipeline using any :obj:`ModelForSequenceClassification`. See the `sequence classification\n",
-    "    examples <../task_summary.html#sequence-classification>`__ for more information.\n",
-    "\n",
-    "    This text classification pipeline can currently be loaded from :func:`~transformers.pipeline` using the following\n",
-    "    task identifier: :obj:`\"sentiment-analysis\"` (for classifying sequences according to positive or negative\n",
-    "    sentiments).\n",
-    "\n",
-    "    If multiple classification labels are available (:obj:`model.config.num_labels >= 2`), the pipeline will run a\n",
-    "    softmax over the results. If there is a single label, the pipeline will run a sigmoid over the result.\n",
-    "\n",
-    "    The models that this pipeline can use are models that have been fine-tuned on a sequence classification task. See\n",
-    "    the up-to-date list of available models on `huggingface.co/models\n",
-    "    <https://huggingface.co/models?filter=text-classification>`__.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self, return_all_scores: bool = False, **kwargs):\n",
-    "        super().__init__(**kwargs)\n",
-    "\n",
-    "        self.check_model_type(\n",
-    "            TF_MODEL_FOR_SEQUENCE_CLASSIFICATION_MAPPING\n",
-    "            if self.framework == \"tf\"\n",
-    "            else MODEL_FOR_SEQUENCE_CLASSIFICATION_MAPPING\n",
-    "        )\n",
-    "\n",
-    "        self.return_all_scores = return_all_scores\n",
-    "\n",
-    "\n",
-    "    def __call__(self, *args, **kwargs):\n",
-    "        \"\"\"\n",
-    "        Classify the text(s) given as inputs.\n",
-    "\n",
-    "        Args:\n",
-    "            args (:obj:`str` or :obj:`List[str]`):\n",
-    "                One or several texts (or one list of prompts) to classify.\n",
-    "\n",
-    "        Return:\n",
-    "            A list or a list of list of :obj:`dict`: Each result comes as list of dictionaries with the following keys:\n",
-    "\n",
-    "            - **label** (:obj:`str`) -- The label predicted.\n",
-    "            - **score** (:obj:`float`) -- The corresponding probability.\n",
-    "\n",
-    "            If ``self.return_all_scores=True``, one such dictionary is returned per label.\n",
-    "        \"\"\"\n",
-    "        outputs = super().__call__(*args, **kwargs)\n",
-    "\n",
-    "\n",
-    "        scores = np.exp(outputs) / (1+np.exp(outputs))\n",
-    "        if self.return_all_scores:\n",
-    "            return [\n",
-    "                [{\"label\": self.model.config.id2label[i], \"score\": score.item()} for i, score in enumerate(item)]\n",
-    "                for item in scores\n",
-    "            ]\n",
-    "        else:\n",
-    "            return [\n",
-    "                {\"label\": self.model.config.id2label[item.argmax()], \"score\": item.max().item()} for item in scores\n",
-    "            ]"
+    "prediction_trainer = MultilabelTrainer(\n",
+    "    model=model2,                         # the instantiated 🤗 Transformers model to be trained\n",
+    "    args=training_args,                  # training arguments, defined above\n",
+    ")"
    ]
   },
   {
@@ -375,11 +310,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline_config = {\n",
-    "    \"return_all_scores\":True,\n",
-    "    \"device\":0    \n",
-    "}\n",
-    "inference_pipeline = MultiLabelTextClassification(model=model2, tokenizer=tokenizer, **pipeline_config)"
+    "output = prediction_trainer.predict(val_dataset)"
    ]
   },
   {
@@ -388,15 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def analyze_result(result, threshold = 0.5):\n",
-    "    \"\"\"Sort the results and throw away all labels with prediction under threshold\"\"\"\n",
-    "    output = []\n",
-    "    for sample in result:\n",
-    "        sample = np.array(sample)\n",
-    "        scores = np.array([label['score'] for label in sample])\n",
-    "        predicted_samples = np.argwhere(scores > threshold).reshape(-1)\n",
-    "        output.append(sorted(sample[predicted_samples], key = lambda item: item['score'], reverse=True))\n",
-    "    return output"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -405,8 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "friends_dataset = pd.read_csv(\"data/friends-final-raw.txt\", sep=\"\\t\")\n",
-    "friends_dataset.head()"
+    "y_pred = output.predictions"
    ]
   },
   {
@@ -415,8 +337,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "friends_dataset[\"line\"] = friends_dataset[\"line\"].str.split(r'[.!?]+\\s')\n",
-    "friends_dataset.head()"
+    "y_pred = np.exp(y_pred) / (1+np.exp(y_pred))\n",
+    "y_true = output.label_ids"
    ]
   },
   {
@@ -425,11 +347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "person_counts = friends_dataset[\"person\"].value_counts()\n",
-    "main_characters = person_counts[person_counts > 1000].reset_index()[\"index\"]\n",
-    "print(main_characters)\n",
-    "\n",
-    "friends_dataset = friends_dataset[friends_dataset[\"person\"].isin(main_characters)]"
+    "np.mean((y_pred - y_true)**2)"
    ]
   },
   {
@@ -442,103 +360,18 @@
     "for p in main_characters:\n",
     "    predicted_emotions[p] = list()\n",
     "\n",
-    "for row in friends_dataset.itertuples():\n",
-    "    x = inference_pipeline(row.line)\n",
-    "    result = analyze_result(x, .2)\n",
+    "for row in tqdm(dataset.itertuples(), total=len(dataset)):\n",
+    "    #prediction = zero_shot_pipeline(row.line, labels, multi_label=True)\n",
+    "    #if len(row.line) == 1:\n",
+    "    #    prediction = [prediction]\n",
+    "    #prediction = [[{'label' : label, 'score': value} for label, value in zip(sentence['labels'], sentence['scores'])] for sentence in prediction]\n",
+    "    #result = analyze_result(prediction, .8)\n",
+    "    prediction = inference_pipeline(row.line)\n",
+    "    result = analyze_result(prediction, .2)\n",
+    "    \n",
+    "    \n",
     "    result = [(pred['label'], pred['score']) for pred in result[0]] \n",
     "    predicted_emotions[row.person].append(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "total_emotions_per_person = {}\n",
-    "for p in main_characters:\n",
-    "    total_emotions_per_person[p] = {}\n",
-    "    for l in labels:\n",
-    "        total_emotions_per_person[p][l] = 0\n",
-    "\n",
-    "for person, sentences in predicted_emotions.items():    \n",
-    "    for s in sentences:\n",
-    "        for e in s:\n",
-    "            total_emotions_per_person[person][e[0]] += (e[1]/ len(sentences))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for person, emotions in total_emotions_per_person.items():\n",
-    "    plt.title(person)\n",
-    "    plt.ylim((0,0.1))\n",
-    "    plt.xticks(rotation='vertical')\n",
-    "    plt.bar(range(0, len(labels)), emotions.values(), tick_label=labels)\n",
-    "    plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(columns=[\"person\", \"emotion\", \"value\"])\n",
-    "\n",
-    "for person, emotions in total_emotions_per_person.items():\n",
-    "    for emotion, value in emotions.items():\n",
-    "        df.loc[len(df)] = [person,emotion,value]\n",
-    "        \n",
-    "df = df[df[\"emotion\"] != \"neutral\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pip install seaborn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import seaborn as sns\n",
-    "\n",
-    "sns.set(rc={'figure.figsize':(15,8)})\n",
-    "sns.set_theme(style=\"whitegrid\")\n",
-    "chart = sns.barplot(x=\"emotion\", y=\"value\", hue=\"person\", data=df)\n",
-    "chart.set_xticklabels(chart.get_xticklabels(), rotation=90)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[len(s) for s in predicted_emotions.values()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "count = 0\n",
-    "for line in predicted_emotions.values():\n",
-    "    for sentence in line:\n",
-    "        count += len(sentence)\n",
-    "count       "
    ]
   },
   {
